--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@
 
 boto3==1.3.1
 botocore==1.4.21          # via boto3
+click==6.6
 docutils==0.12            # via botocore
 jmespath==0.9.0           # via boto3, botocore
 python-dateutil==2.5.3    # via botocore
