- Enable Travis CI - Add pytest to dev-requirements - make dev-requirements include runtime requirements - ignore editor and IDE files

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,12 @@ target/
 
 #Ipython Notebook
 .ipynb_checkpoints
+
+# Editor temporary files
+\#*#
+.#*
+*~
+
+# IntelliJ IDEA / PyCharm
+/.idea/
+
