--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ python:
   - "3.5"
   - "pypy"
 install:
-  - pip install dev-requirements.txt
+  - pip install -r dev-requirements.txt
 script: py.test --doctest-modules
