--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,8 @@ install:
 script:
   - py.test ec2_route53_sync/utils --cov=ec2_route53_sync/utils --doctest-modules
 after_success:
-  - coveralls
+  - if [[ $ENV == python=3.* ]];
+    then
+      coveralls
+    fi
 
