--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,7 @@ install:
 script:
   - py.test ec2_route53_sync/utils --cov=ec2_route53_sync/utils --doctest-modules
 after_success:
-  - if [[ $ENV == python=3.* ]];
-    then
-      coveralls
+  - if [[ $ENV == python=3.* ]]; then
+      coveralls;
     fi
 
