--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
 script:
   - py.test ec2_route53_sync/utils --cov=ec2_route53_sync/utils --doctest-modules
 after_success:
-  - if [[ $ENV == python=3.5 ]];
+  - if [[ $TRAVIS_PYTHON_VERSION == "3.5" ]];
     then
       coveralls;
     fi
